--- a/dotnet/WebApiSolution/WebMvc/Views/FileStorage/Index.cshtml
+++ b/dotnet/WebApiSolution/WebMvc/Views/FileStorage/Index.cshtml
@@ -8,7 +8,10 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    
+    <div>
+        <a class="nav-link text-dark" asp-area="" asp-controller="FileStorage" asp-action="Create">Upload file</a>
+    </div>
 </p>
 <table class="table">
     <thead>
