--- a/dotnet/WebApiSolution/WebMvc/Views/FileStorage/Index.cshtml
+++ b/dotnet/WebApiSolution/WebMvc/Views/FileStorage/Index.cshtml
@@ -5,45 +5,38 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Index</h1>
+<h1>Azure Fileshare Management</h1>
 
 <p>
     
     <div>
-        <a class="nav-link text-dark" asp-area="" asp-controller="FileStorage" asp-action="Create">Upload file</a>
+        @Html.ActionLink("Upload file", "Create")
+       
     </div>
 </p>
 <table class="table">
     <thead>
         <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Uri)
-            </th>
+           
             <th>
                 @Html.DisplayNameFor(model => model.Name)
             </th>
            
-            <th>
-                @Html.DisplayNameFor(model => model.ContentType)
-            </th>
+          
             <th></th>
         </tr>
     </thead>
     <tbody>
 @foreach (var item in Model) {
         <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Uri)
-            </td>
+           
             <td>
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
 
+           
             <td>
-                @Html.DisplayFor(modelItem => item.ContentType)
-            </td>
-            <td>
-                    @Html.ActionLink("Edit", "Edit", new {  uri=item.Uri }) |
+                    
                     @Html.ActionLink("Download", "Download", new { uri=item.Uri }) |
                     @Html.ActionLink("Delete", "Delete", new { uri=item.Uri})
             </td>
